@@ -373,78 +373,6 @@ public class UtilTest {
     }
 
     @Test
-    public void testToMonthNumber() {
-
-        assertEquals(0, Util.getMonthNumber("jan"));
-        assertEquals(1, Util.getMonthNumber("feb"));
-        assertEquals(2, Util.getMonthNumber("mar"));
-        assertEquals(3, Util.getMonthNumber("apr"));
-        assertEquals(4, Util.getMonthNumber("may"));
-        assertEquals(5, Util.getMonthNumber("jun"));
-        assertEquals(6, Util.getMonthNumber("jul"));
-        assertEquals(7, Util.getMonthNumber("aug"));
-        assertEquals(8, Util.getMonthNumber("sep"));
-        assertEquals(9, Util.getMonthNumber("oct"));
-        assertEquals(10, Util.getMonthNumber("nov"));
-        assertEquals(11, Util.getMonthNumber("dec"));
-
-        assertEquals(0, Util.getMonthNumber("#jan#"));
-        assertEquals(1, Util.getMonthNumber("#feb#"));
-        assertEquals(2, Util.getMonthNumber("#mar#"));
-        assertEquals(3, Util.getMonthNumber("#apr#"));
-        assertEquals(4, Util.getMonthNumber("#may#"));
-        assertEquals(5, Util.getMonthNumber("#jun#"));
-        assertEquals(6, Util.getMonthNumber("#jul#"));
-        assertEquals(7, Util.getMonthNumber("#aug#"));
-        assertEquals(8, Util.getMonthNumber("#sep#"));
-        assertEquals(9, Util.getMonthNumber("#oct#"));
-        assertEquals(10, Util.getMonthNumber("#nov#"));
-        assertEquals(11, Util.getMonthNumber("#dec#"));
-
-        assertEquals(0, Util.getMonthNumber("January"));
-        assertEquals(1, Util.getMonthNumber("February"));
-        assertEquals(2, Util.getMonthNumber("March"));
-        assertEquals(3, Util.getMonthNumber("April"));
-        assertEquals(4, Util.getMonthNumber("May"));
-        assertEquals(5, Util.getMonthNumber("June"));
-        assertEquals(6, Util.getMonthNumber("July"));
-        assertEquals(7, Util.getMonthNumber("August"));
-        assertEquals(8, Util.getMonthNumber("September"));
-        assertEquals(9, Util.getMonthNumber("October"));
-        assertEquals(10, Util.getMonthNumber("November"));
-        assertEquals(11, Util.getMonthNumber("Decembre"));
-
-        assertEquals(0, Util.getMonthNumber("01"));
-        assertEquals(1, Util.getMonthNumber("02"));
-        assertEquals(2, Util.getMonthNumber("03"));
-        assertEquals(3, Util.getMonthNumber("04"));
-        assertEquals(4, Util.getMonthNumber("05"));
-        assertEquals(5, Util.getMonthNumber("06"));
-        assertEquals(6, Util.getMonthNumber("07"));
-        assertEquals(7, Util.getMonthNumber("08"));
-        assertEquals(8, Util.getMonthNumber("09"));
-        assertEquals(9, Util.getMonthNumber("10"));
-
-        assertEquals(0, Util.getMonthNumber("1"));
-        assertEquals(1, Util.getMonthNumber("2"));
-        assertEquals(2, Util.getMonthNumber("3"));
-        assertEquals(3, Util.getMonthNumber("4"));
-        assertEquals(4, Util.getMonthNumber("5"));
-        assertEquals(5, Util.getMonthNumber("6"));
-        assertEquals(6, Util.getMonthNumber("7"));
-        assertEquals(7, Util.getMonthNumber("8"));
-        assertEquals(8, Util.getMonthNumber("9"));
-
-        assertEquals(10, Util.getMonthNumber("11"));
-        assertEquals(11, Util.getMonthNumber("12"));
-
-        assertEquals(-1, Util.getMonthNumber(";lkjasdf"));
-        assertEquals(-1, Util.getMonthNumber("3.2"));
-        assertEquals(-1, Util.getMonthNumber("#test#"));
-        assertEquals(-1, Util.getMonthNumber(""));
-    }
-
-    @Test
     public void testToUpperCharFirst() {
 
         assertEquals("", Util.toUpperFirstLetter(""));
