@@ -15,6 +15,7 @@
     - Jars that are available in maven are now downloaded and used in both ant and gradle
     - Replaced option parsing library ritopt with apache commons-cli which is in maven repository
     - BREAKING passing an option file to the cli command no longer works due to change of internal cli library!
+    - Fix for bug #1283: Month fields like {8,} no longer cause exceptions
 2.11 beta 2
     - Feature: Option to clean URLs generated by Google (patch #204)
     - Fix for bug #1272: JabRef now launches on Mac OS X
